sfdx/force-app/main/default/objects/LDGCRM_application__c/LDGCRM_application__c.object-meta.xml
<CustomObject>
    <description>Login.gov Partner Applications</description>
    <label>Application</label>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>