sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Account_Manager_Approved__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Account_Manager_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AM has verified all launch details are accurate and we are ready for launch after the partner submits a move to production request.</description>
    <inlineHelpText>AM has verified all launch details are accurate and we are ready for launch after the partner submits a move to production request.</inlineHelpText>
    <label>Account Manager Approved</label>
    <type>Checkbox</type>
</CustomField>