sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Actual_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Actual_Go_Live_Date__c</fullName>
    <description>Date the application went live in production.</description>
    <inlineHelpText>Date the application went live in production.</inlineHelpText>
    <label>Actual Go-Live Date</label>
    <type>Date</type>
</CustomField>