sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Agreement_Finalization_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Agreement_Finalization_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Once the IAA/IGCA is finalized, reach out to the partner to communicate next steps to deployment.</description>
    <inlineHelpText>Once the IAA/IGCA is finalized, reach out to the partner to communicate next steps to deployment.</inlineHelpText>
    <label>Agreement Finalization Email Sent</label>
    <type>Checkbox</type>
</CustomField>