sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Annual_Revenue_Amount__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Annual_Revenue_Amount__c</fullName>
    <description>Annual Revenue Amount, which is based upon Opportunity Amount</description>
    <formula>IF(
    ISBLANK(LDGCRM_Opportunity__c),
    NULL,
    LDGCRM_Opportunity__r.Amount
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Annual Revenue Amount, which is based upon Opportunity Amount</inlineHelpText>
    <label>Annual Revenue Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>