sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Broker_App_Parent__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Broker_App_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the parent application the brokered application is a part of.</description>
    <inlineHelpText>Reference to the parent application the brokered application is a part of.</inlineHelpText>
    <label>Broker App Parent</label>
    <referenceTo>LDGCRM_application__c</referenceTo>
    <relationshipLabel>Applications (Broker App Parent)</relationshipLabel>
    <relationshipName>Applications2</relationshipName>
    <type>Lookup</type>
</CustomField>