sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Broker_Application__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Broker_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this application is a broker application serving many sub applications</description>
    <inlineHelpText>Whether this application is a broker application serving many sub applications</inlineHelpText>
    <label>Broker Application</label>
    <type>Checkbox</type>
</CustomField>