sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Completed_Customer_Support_Survey__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Completed_Customer_Support_Survey__c</fullName>
    <description>URL of completed Login.gov User Support Survey.</description>
    <inlineHelpText>URL of completed Login.gov User Support Survey.</inlineHelpText>
    <label>Completed Customer Support Survey</label>
    <type>Url</type>
</CustomField>