sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Completed_Fraud_Survey__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Completed_Fraud_Survey__c</fullName>
    <description>URL of completed Login.gov Partner Fraud Risk Survey.</description>
    <inlineHelpText>URL of completed Login.gov Partner Fraud Risk Survey.</inlineHelpText>
    <label>Completed Fraud Survey</label>
    <type>Url</type>
</CustomField>