sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Completed_Security_Survey_URL__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Completed_Security_Survey_URL__c</fullName>
    <description>URL of completed Login.gov Partner Security Survey.</description>
    <inlineHelpText>URL of completed Login.gov Partner Security Survey.</inlineHelpText>
    <label>Completed Security Survey URL</label>
    <type>Url</type>
</CustomField>