sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Current_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Current_Go_Live_Date__c</fullName>
    <description>The most up-to-date go live date that accounts for any previous delays or pauses.</description>
    <inlineHelpText>The most up-to-date go live date that accounts for any previous delays or pauses.</inlineHelpText>
    <label>Current Go-Live Date</label>
    <type>Date</type>
</CustomField>