sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Customer_Support_Meeting__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Customer_Support_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Includes Customer Support Lead to discuss help desk info, workflows, contact center reporting.</description>
    <inlineHelpText>Includes Customer Support Lead to discuss help desk info, workflows, contact center reporting.</inlineHelpText>
    <label>Customer Support Meeting</label>
    <type>Checkbox</type>
</CustomField>