sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Demographic_Served__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Demographic_Served__c</fullName>
    <description>Describes the end users of the application</description>
    <inlineHelpText>Describes the end users of the application</inlineHelpText>
    <label>Demographic Served</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Demographic_Served</valueSetName>
    </valueSet>
</CustomField>