sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Description__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Description__c</fullName>
    <description>What the application does</description>
    <inlineHelpText>What the application does</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>