sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Est_Monthly_Active_Users__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Est_Monthly_Active_Users__c</fullName>
    <description>From the cost estimate. Deprecated</description>
    <inlineHelpText>From the cost estimate</inlineHelpText>
    <label>Estimated Monthly Active Users (Dep)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>