sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Estimated_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Estimated_Go_Live_Date__c</fullName>
    <description>Estimated Go-Live Date from the Linked Opportunity</description>
    <formula>IF(
    ISBLANK(LDGCRM_Opportunity__c),
    NULL,
    LDGCRM_Opportunity__r.LDGCRM_Estimated_Go_Live_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically populated Estimated Go-Live Date from the Linked Opportunity</inlineHelpText>
    <label>Estimated Go-Live Date</label>
    <type>Date</type>
</CustomField>