sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Finalized_Application_Details__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Finalized_Application_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Application record has been reviewed and vital info and usage info is up to date.</description>
    <inlineHelpText>Application record has been reviewed and vital info and usage info is up to date</inlineHelpText>
    <label>Finalized Application Details</label>
    <type>Checkbox</type>
</CustomField>