sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Followup_Tech_Sync_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Followup_Tech_Sync_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Scheduled follow up tech sync.</description>
    <inlineHelpText>Scheduled follow up tech sync.</inlineHelpText>
    <label>Coordinated Optional Follow-up Tech Sync</label>
    <type>Checkbox</type>
</CustomField>