sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Fraud_Meeting_Held__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Fraud_Meeting_Held__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Led by the Fraud Ops team to discuss risks and threat impacts.</description>
    <inlineHelpText>Led by the Fraud Ops team to discuss risks and threat impacts.</inlineHelpText>
    <label>Fraud Meeting Held</label>
    <type>Checkbox</type>
</CustomField>