sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_IDV_Upgrade__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_IDV_Upgrade__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox indicating whether this application is a candidate for IdV upgrade</description>
    <inlineHelpText>Checkbox indicating whether this application is a candidate for IdV upgrade</inlineHelpText>
    <label>IdV Upgrade?</label>
    <type>Checkbox</type>
</CustomField>