sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Launch_Activities_Completed__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Launch_Activities_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Confirmed Login.gov representative participated in any agency required launch day activities.</description>
    <inlineHelpText>Confirmed Login.gov representative participated in any agency required launch day activities.</inlineHelpText>
    <label>Launch Activities Completed</label>
    <type>Checkbox</type>
</CustomField>