sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Launch_Activities_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Launch_Activities_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Confirmed if Agency expects Login.gov participation in any agency-led pre-launch or launch day activities.</description>
    <inlineHelpText>Confirmed if Agency expects Login.gov participation in any agency-led pre-launch or launch day activities.</inlineHelpText>
    <label>Confirmed Launch Activities</label>
    <type>Checkbox</type>
</CustomField>