sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Launch_Checklist_URL__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Launch_Checklist_URL__c</fullName>
    <description>Link to the Launch Checklist URL with relevant details for the launch.</description>
    <inlineHelpText>Link to the Launch Checklist URL with relevant details for the launch.</inlineHelpText>
    <label>Launch Checklist URL</label>
    <type>Url</type>
</CustomField>