sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Launch_Coordinators_Kickoff_Call__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Launch_Coordinators_Kickoff_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Internal call to coordinate on outstanding needs before the Launch Kick-off Meeting with the partner.</description>
    <inlineHelpText>Internal call to coordinate on outstanding needs before the Launch Kick-off Meeting with the partner.</inlineHelpText>
    <label>Launch Coordinators Kick-off Call</label>
    <type>Checkbox</type>
</CustomField>