sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Launch_Deck_URL__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Launch_Deck_URL__c</fullName>
    <description>Link to the App Launch Deck with relevant details for the launch.</description>
    <inlineHelpText>Link to the App Launch Deck with relevant details for the launch.</inlineHelpText>
    <label>Launch Deck URL</label>
    <type>Url</type>
</CustomField>