sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Launch_Kickoff_Meeting_Held__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Launch_Kickoff_Meeting_Held__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Introduce a partner agency to the Login.gov launch process for Level 3+ / IdV application launches.</description>
    <inlineHelpText>Introduce a partner agency to the Login.gov launch process for Level 3+ / IdV application launches.</inlineHelpText>
    <label>Launch Kick-off Meeting Held</label>
    <type>Checkbox</type>
</CustomField>