sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Launch_Level__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Launch_Level__c</fullName>
    <description>The Launch Level for a given application</description>
    <inlineHelpText>The Launch Level for a given application</inlineHelpText>
    <label>Launch Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Very Low Impact</fullName>
            </value>
            <value>
                <fullName>2 - Low Impact</fullName>
            </value>
            <value>
                <fullName>3 - Moderate Impact</fullName>
            </value>
            <value>
                <fullName>4 - High Impact</fullName>
            </value>
            <value>
                <fullName>5 - Very High Impact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>