sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Launch_Risk__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Launch_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flags that an application is at risk because it&apos;s level 3+, checklist is less than 80% and its launch date is within 30 days.</description>
    <inlineHelpText>Flags that an application is at risk because it&apos;s level 3+, checklist is less than 80% and its launch date is within 30 days.</inlineHelpText>
    <label>Launch Risk</label>
    <type>Checkbox</type>
</CustomField>