sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Launch_Tested__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Launch_Tested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Agency has tested and confirmed application functionality within the Login.gov Sandbox environment.</description>
    <inlineHelpText>Agency has tested and confirmed application functionality within the Login.gov Sandbox environment.</inlineHelpText>
    <label>Launch Tested</label>
    <type>Checkbox</type>
</CustomField>