sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Level_1_Complete_Pct__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Level_1_Complete_Pct__c</fullName>
    <description>Percentage indicating Level 1 Launch Checklist</description>
    <formula>(
    IF(LDGCRM_Launch_Tested__c, 1, 0) +
    IF(LDGCRM_Finalized_Application_Details__c, 1, 0) +
    IF(LDGCRM_Agreement_Finalization_Email_Sent__c, 1, 0) +
    IF(LDGCRM_Account_Manager_Approved__c, 1, 0) +
    IF(LDGCRM_Sent_Integration_Approval_Request__c, 1, 0) +
    IF(LDGCRM_Production_Launch_Completed__c, 1, 0) +
    IF(LDGCRM_Launch_Activities_Confirmed__c, 1, 0) +
    IF(LDGCRM_Launch_Activities_Completed__c, 1, 0) +
    IF(ISBLANK(LDGCRM_P3_Team_UUID__c), 0, 1)
) / 9</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Percentage indicating Level 1 Launch Checklist</inlineHelpText>
    <label>Level 1+ Complete %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>