sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Level_4_Complete_Pct__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Level_4_Complete_Pct__c</fullName>
    <formula>(
    IF(LDGCRM_Marketing_Strategy__c, 1, 0) +
    IF(LDGCRM_Requested_CC_Reporting__c, 1, 0) +
    IF(NOT(ISBLANK(LDGCRM_Completed_Security_Survey_URL__c)), 1, 0) +
    IF(
        OR(
            LDGCRM_Security_Meeting__c,
            LDGCRM_No_Security_Meeting__c
        ),
        1,
        0
    )
) / 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level 4+ Complete %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>