sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Market_Segment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Market Segment based upon Partner Account -&gt; Account</description>
    <inlineHelpText>Market Segment based upon Partner Account -&gt; Account</inlineHelpText>
    <label>Market Segment</label>
    <referenceTo>LDGCRM_Market_Segment__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>