sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Marketing_Strategy__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Marketing_Strategy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Confirm if agency expects Login.gov participation in pre-launch or launch day activities.</description>
    <inlineHelpText>Confirm if agency expects Login.gov participation in pre-launch or launch day activities.</inlineHelpText>
    <label>Marketing/Comms Strategy</label>
    <type>Checkbox</type>
</CustomField>