sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_No_Fraud_Meeting__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_No_Fraud_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fraud ops team decided not to require this meeting.</description>
    <inlineHelpText>Fraud ops team decided not to require this meeting.</inlineHelpText>
    <label>Fraud Meeting Deemed Unnecessary</label>
    <type>Checkbox</type>
</CustomField>