sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_No_Launch_Kickoff_Meeting__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_No_Launch_Kickoff_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No Launch Kickoff meeting is necessary</description>
    <inlineHelpText>No Launch Kickoff meeting is necessary</inlineHelpText>
    <label>Launch Kick-off Meeting Unnecessary</label>
    <type>Checkbox</type>
</CustomField>