sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_No_Security_Meeting__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_No_Security_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Security team decided not to require this meeting.</description>
    <inlineHelpText>Security team decided not to require this meeting.</inlineHelpText>
    <label>Security Meeting Deemed Unnecessary</label>
    <type>Checkbox</type>
</CustomField>