sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_No_UX_Meeting__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_No_UX_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A decision was made not to require this meeting.</description>
    <inlineHelpText>A decision was made not to require this meeting.</inlineHelpText>
    <label>UX Meeting Deemed Unnecessary</label>
    <type>Checkbox</type>
</CustomField>