sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_num_est_annual_idv__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_num_est_annual_idv__c</fullName>
    <description>Estimated yearly identity verification transactions</description>
    <inlineHelpText>Estimated yearly identity verification transactions</inlineHelpText>
    <label>Number of Estimated Annual IdV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>