sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specific deal or revenue event with an account</description>
    <inlineHelpText>Specific deal or revenue event with an account</inlineHelpText>
    <label>Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Login.gov</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>