sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Opportunity_Lead__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Opportunity_Lead__c</fullName>
    <description>Returns first name, last name and email of the opportunity lead.</description>
    <formula>HYPERLINK(
    &quot;/&quot; &amp; LDGCRM_Opportunity__r.OwnerId,
    LDGCRM_Opportunity__r.Owner.FirstName &amp;
    &quot; &quot; &amp;
    LDGCRM_Opportunity__r.Owner.LastName,
    &quot;_blank&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns first name, last name and email of the opportunity lead.</inlineHelpText>
    <label>Opportunity Lead</label>
    <type>Text</type>
</CustomField>