sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Opportunity_Stage__c</fullName>
    <description>Linked Opportunity Stage.</description>
    <formula>IF(
    NOT(ISBLANK(LDGCRM_Opportunity__c)),
    TEXT(LDGCRM_Opportunity__r.StageName),
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically populated with the linked Opportunities &quot;Stage&quot; field</inlineHelpText>
    <label>Opportunity Stage</label>
    <type>Text</type>
</CustomField>