sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_P3_Partner_Portal_Team_Name__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_P3_Partner_Portal_Team_Name__c</fullName>
    <description>Name from the partner portal that was copied over. The name can be modified, so trust the Team UUID.</description>
    <inlineHelpText>Name from the partner portal that was copied over. The name can be modified, so trust the Team UUID.</inlineHelpText>
    <label>Partner Portal Team Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>