sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_P3_Team_UUID__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_P3_Team_UUID__c</fullName>
    <description>References partner portal team id that is consistent across environments.</description>
    <inlineHelpText>References partner portal team id that is consistent across environments.</inlineHelpText>
    <label>Partner Portal Team UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>