sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Partner_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Link to the partner agreement the application falls under.</description>
    <inlineHelpText>Link to the partner agreement the application falls under.</inlineHelpText>
    <label>Partner Account</label>
    <referenceTo>LDGCRM_Partner_Account__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications3</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>