sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_PP_Issuer_Strings__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_PP_Issuer_Strings__c</fullName>
    <description>OEs maintain this field with the move to production requests from ZenDesk and ensure they accurately reflect what&apos;s in GitHub.</description>
    <inlineHelpText>OEs maintain this field with the move to production requests from ZenDesk and ensure they accurately reflect what&apos;s in GitHub.</inlineHelpText>
    <label>Issuer Strings</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>