sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Production_Launch_Completed__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Production_Launch_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Implement Launch To Production standard operating procedure.</description>
    <inlineHelpText>Implement Launch To Production standard operating procedure.</inlineHelpText>
    <label>Launch to Production Completed by OE</label>
    <type>Checkbox</type>
</CustomField>