sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Ramp_Up_Approach__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Ramp_Up_Approach__c</fullName>
    <description>What we expect from the application usage curve</description>
    <inlineHelpText>What we expect from the application usage curve</inlineHelpText>
    <label>Ramp Up Approach</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>Gradual</fullName>
            </value>
            <value>
                <fullName>Spikes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>