sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Requested_CC_Reporting__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Requested_CC_Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Initiate process for adding new agency applications for Contact Center reporting. Takes 6-8 weeks.</description>
    <inlineHelpText>Initiate process for adding new agency applications for Contact Center reporting. Takes 6-8 weeks.</inlineHelpText>
    <label>Requested Contact Center Reporting</label>
    <type>Checkbox</type>
</CustomField>