sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Security_Meeting__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Security_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Led by security team. Combine with Fraud Meeting for the time being.</description>
    <inlineHelpText>Led by security team. Combine with Fraud Meeting for the time being.</inlineHelpText>
    <label>Security Meeting</label>
    <type>Checkbox</type>
</CustomField>