sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Sent_Integration_Approval_Request__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Sent_Integration_Approval_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OE has confirmed the service level for the integration request matches AirTable.</description>
    <inlineHelpText>OE has confirmed the service level for the integration request matches AirTable.</inlineHelpText>
    <label>Integration Request Approval Sent</label>
    <type>Checkbox</type>
</CustomField>