sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Service_Level__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Service_Level__c</fullName>
    <description>Level of identity service provided</description>
    <inlineHelpText>Level of identity service provided</inlineHelpText>
    <label>Service Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Authentication Only</fullName>
            </value>
            <value>
                <fullName>Basic IdV</fullName>
            </value>
            <value>
                <fullName>Enhanced IdV (IAL2)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>