sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Status__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Status__c</fullName>
    <description>Status of the application lifecycle</description>
    <inlineHelpText>Status of the application lifecycle</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Agreement</fullName>
            </value>
            <value>
                <fullName>Pending Launch</fullName>
            </value>
            <value>
                <fullName>Move to Production Request</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Not Active</fullName>
            </value>
            <value>
                <fullName>Decommissioned</fullName>
            </value>
            <value>
                <fullName>Pending Partner Decommission</fullName>
            </value>
            <value>
                <fullName>Partner Pause</fullName>
            </value>
            <value>
                <fullName>Service Level Change Scheduled</fullName>
            </value>
            <value>
                <fullName>Volume Increase Scheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>