sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_Support_Information__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Support_Information__c</fullName>
    <description>Contact or support/helpdesk information for this application</description>
    <inlineHelpText>Contact or support/helpdesk information for this application</inlineHelpText>
    <label>Support Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>