sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_URL__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_URL__c</fullName>
    <description>URL of the live application</description>
    <inlineHelpText>URL of the live application</inlineHelpText>
    <label>URL</label>
    <type>Url</type>
</CustomField>