sfdx/force-app/main/default/objects/LDGCRM_application__c/fields/LDGCRM_UX_Meeting_Held__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_UX_Meeting_Held__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Led by a Solutions Architect to discuss user flow scenarios and proofing fallback.</description>
    <inlineHelpText>Led by a Solutions Architect to discuss user flow scenarios and proofing fallback.</inlineHelpText>
    <label>UX Meeting</label>
    <type>Checkbox</type>
</CustomField>