sfdx/force-app/main/default/objects/LDGCRM_application__c/recordTypes/LDGCRM_Application.recordType-meta.xml
<RecordType>
    <fullName>LDGCRM_Application</fullName>
    <active>true</active>
    <description>Master Login.gov Record Type</description>
    <label>Login.gov Application</label>
</RecordType>